# rules_markdown

./: .bazeliskrc  .gitignore  .lua-format  .luacheckrc  BUILD  Cargo.toml  LICENSE  MODULE.bazel  README.md  pyproject.toml  python_version_test.sh  requirements.txt  requirements_lock.txt
.markdown_summary/: contents.bzl
markdown/extensions/: markdown.bzl
markdown/extensions/private/: BUILD  git_repo.bzl  main_repo.bzl  main_repo_defs.bzl
markdown/private/: defs.bzl
markdown/private/collection/: BUILD  Cargo.toml  defs.bzl  gen_collection_src.py  gen_collection_src.rs  gen_collection_src_test.py
markdown/private/core/: BUILD  Cargo.toml  defs.bzl  parse_date.py  parse_date_test.py  preprocess.rs  preprocess_test.py  raw_version.rs  raw_version_test.py  source_hash.rs  source_hash_test.py  validate_input_metadata.rs  validate_input_metadata_test.py  validate_output_metadata.rs  validate_output_metadata_test.py  version.rs  version_test.py
markdown/private/core/filters/: BUILD  header_auto_ids.lua  include.lua  paragraph_annotations.lua  poetry_lines.lua  validate_ids.lua  validate_quotes.lua  wordcount.lua  write_metadata.lua
markdown/private/core/group/: BUILD  Cargo.toml  combine_deps_metadata.rs  combine_deps_metadata_test.py
markdown/private/core/lint/: BUILD  Cargo.toml  custom_lint.rs  custom_lint_test.py
markdown/private/core/spelling/: BUILD  spellcheck_cleanup.lua  spellcheck_filter.lua
markdown/private/formats/: BUILD  defs.bzl  lib.bzl  types.bzl
markdown/private/formats/ebook/: BUILD  defs.bzl
markdown/private/formats/filters/: BUILD  add_subject.lua  add_title.lua  cleanup_metadata.lua  remove_collection_separators.lua  remove_collection_separators_before_headers.lua  remove_paragraph_annotations.lua
markdown/private/formats/html/: defs.bzl
markdown/private/formats/latex/: BUILD  defs.bzl  latex_filter.lua
markdown/private/formats/metadata/: defs.bzl
markdown/private/formats/text/: BUILD  defs.bzl  plain_markdown_filter.lua  tumblr_markdown_filter.lua
markdown/private/formats/word/: BUILD  Cargo.toml  defs.bzl  docx_filter.lua  shunn_docx_filter.lua  shunn_metadata.rs  shunn_metadata_test.py
markdown/private/git/: BUILD  defs.bzl  precommit_template  run_tests
markdown/private/group/: BUILD  Cargo.toml  defs.bzl  group_publications.rs  group_publications_test.py  group_summary.rs  group_summary_test.py
markdown/private/summary/: BUILD  contents.bzl  defs.bzl  impl.bzl  refresh.sh
markdown/private/support/lua/: BUILD  defs.bzl
markdown/private/support/python/: BUILD  defs.bzl
markdown/private/support/shell/: defs.bzl
markdown/private/utils/: BUILD  Cargo.toml  arg_validators.rs  args.rs  bazel.rs  defs.bzl  deserializers.rs  json.rs  lib.bzl  metadata.py  metadata.rs  problems.rs  publications.rs  test_utils.py  utils.rs  validators.rs
markdown/private/workspace/: BUILD  defs.bzl  new_package.sh
markdown/testing/: BUILD  defs.bzl
mypy_stubs/: BUILD
readme/: BUILD  defs.bzl
tests/: BUILD  container_build.sh  container_test.sh  extra_precommit.sh
tests/container/: BUILD  Containerfile  run_tests.sh  setup_tests.sh
tests/other_workspace/: .bazeliskrc  MODULE.bazel
tests/other_workspace/.markdown_summary/: contents.bzl
tests/other_workspace/.markdown_workspace/: git_repo_version
tests/other_workspace/tests/test1/saved/: test1.docx  test1.md  test1.metadata.json  test1.odt  test1.shunnmodern.docx  test1.tex  test1.tumblr.md
tests/other_workspace/tests/test2/saved/: test2.docx  test2.md  test2.metadata.json  test2.odt  test2.shunnmodern.docx  test2.tex  test2.tumblr.md
tests/other_workspace/tests/test3/.markdown_summary/: contents.bzl
tests/other_workspace/tests/test3/saved/: test3.deps_metadata.json  test3.md  test3.metadata.json  test3.odt  test3.shunnmodern.docx  test3.tex  test3.tumblr.md  test3a.docx  test3a.odt  test3a.shunnmodern.docx  test3a.tex
tests/other_workspace/tests/test4/saved/: test4.deps_metadata.json  test4.docx  test4.md  test4.metadata.json  test4.odt  test4.shunnmodern.docx  test4.tex  test4.tumblr.md
tests/other_workspace/tests/test5/saved/: test5.docx  test5.md  test5.metadata.json  test5.odt  test5.shunnmodern.docx  test5.tex
tests/simple/saved/: simple.docx  simple.md  simple.metadata.json  simple.odt  simple.shunnmodern.docx  simple.tex  simple.tumblr.md
tools/format/: defs.bzl
tools/lint/: linters.bzl
tools/lua/: BUILD  defs.bzl  lua_format_stub.sh
tools/python/: BUILD  defs.bzl  python_version.bzl
tools/shell/: BUILD  defs.bzl
