"""Module definition for rules_markdown."""

PYTHON_VERSION = "3.13.2"

module(
    name = "rules_markdown",
    version = "0.18.2",
)

bazel_dep(
    name = "bazel_skylib",
    version = "1.7.1",
)
bazel_dep(
    name = "rules_python",
    version = "1.4.1",
)
bazel_dep(
    name = "rules_rust",
    version = "0.61.0",
)
bazel_dep(
    name = "buildifier_prebuilt",
    version = "8.0.3",
)
bazel_dep(
    name = "platforms",
    version = "0.0.11",
)
bazel_dep(
    name = "rules_nixpkgs_core",
    version = "0.13.0",
)

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    python_version = PYTHON_VERSION,
)
use_repo(python, "python_versions")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pip",
    python_version = PYTHON_VERSION,
    requirements_lock = "//:requirements_lock.txt",
)
use_repo(pip, "pip")

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    edition = "2024",
    versions = ["1.87.0"],
)
use_repo(rust, "rust_toolchains")

register_toolchains("@rust_toolchains//:all")

crate = use_extension(
    "@rules_rust//crate_universe:extension.bzl",
    "crate",
)
crate.from_cargo(
    name = "crates",
    cargo_lockfile = "//:Cargo.lock",
    manifests = [
        "//:Cargo.toml",
        "//markdown/private/collection:Cargo.toml",
        "//markdown/private/core:Cargo.toml",
        "//markdown/private/core/group:Cargo.toml",
        "//markdown/private/core/lint:Cargo.toml",
        "//markdown/private/formats/word:Cargo.toml",
        "//markdown/private/group:Cargo.toml",
        "//markdown/private/utils:Cargo.toml",
    ],
)
use_repo(crate, "crates")

nix_repo = use_extension("@rules_nixpkgs_core//extensions:repository.bzl", "nix_repo", isolate = True)
nix_repo.github(
    name = "nixpkgs",
    commit = "9b5ac7ad45298d58640540d0323ca217f32a6762",  # 24.11 as of 2025/05/19
    sha256 = "03370fd7a26c7a1b321b9fd5faac471bbc08200a5c4a418d4cc57f0311ba9993",
)
use_repo(nix_repo, "nixpkgs")

nix_pkg = use_extension("@rules_nixpkgs_core//extensions:package.bzl", "nix_pkg", isolate = True)
nix_pkg.attr(
    attr = "calibre",
    repo = "@nixpkgs",
)
nix_pkg.attr(
    attr = "glibcLocales",
    build_file_content = """exports_files(
    ["lib/locale/locale-archive"],
    visibility = ["//visibility:public"],
)""",
    repo = "@nixpkgs",
)
nix_pkg.attr(
    attr = "hexdump",
    repo = "@nixpkgs",
)
nix_pkg.attr(
    attr = "hunspell",
    repo = "@nixpkgs",
)
nix_pkg.attr(
    attr = "lua54Packages.luacheck",
    repo = "@nixpkgs",
)
nix_pkg.attr(
    attr = "luaformatter",
    repo = "@nixpkgs",
)
nix_pkg.attr(
    attr = "markdownlint-cli",
    repo = "@nixpkgs",
)
nix_pkg.attr(
    attr = "pandoc",
    repo = "@nixpkgs",
)
nix_pkg.attr(
    attr = "perl538Packages.strip-nondeterminism",
    repo = "@nixpkgs",
)
nix_pkg.attr(
    attr = "poppler_utils",
    repo = "@nixpkgs",
)
nix_pkg.attr(
    attr = "ruff",
    repo = "@nixpkgs",
)
nix_pkg.attr(
    attr = "shellcheck",
    repo = "@nixpkgs",
)
nix_pkg.attr(
    attr = "shfmt",
    repo = "@nixpkgs",
)
nix_pkg.expr(
    name = "texlive",
    attr = "",
    expr = "with import <nixpkgs> {}; texliveMedium.withPackages (ps: with ps; [ bold-extra footmisc titlesec xurl ])",
    repo = "@nixpkgs",
)
nix_pkg.attr(
    attr = "unoconv",
    repo = "@nixpkgs",
)
nix_pkg.attr(
    attr = "unzip",
    repo = "@nixpkgs",
)
nix_pkg.attr(
    attr = "zip",
    repo = "@nixpkgs",
)
use_repo(
    nix_pkg,
    "calibre",
    "glibcLocales",
    "hexdump",
    "hunspell",
    "lua54Packages.luacheck",
    "luaformatter",
    "markdownlint-cli",
    "pandoc",
    "perl538Packages.strip-nondeterminism",
    "poppler_utils",
    "ruff",
    "shellcheck",
    "shfmt",
    "texlive",
    "unoconv",
    "unzip",
    "zip",
)

hunspell_dicts = use_extension("//markdown/private/external:hunspell_dicts.bzl", "hunspell_dicts")
use_repo(hunspell_dicts, "hunspell_dicts")

prosegrinder_pandoc_templates = use_extension("//markdown/private/external:prosegrinder_pandoc_templates.bzl", "prosegrinder_pandoc_templates")
use_repo(prosegrinder_pandoc_templates, "prosegrinder_pandoc_templates")

markdown = use_extension("//markdown/extensions:markdown.bzl", "markdown", dev_dependency = True)
use_repo(markdown, "markdown")
