[package]
name = "markdown_private_core"
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "raw_version"
path = "raw_version.rs"

[[bin]]
name = "source_hash"
path = "source_hash.rs"

[[bin]]
name = "validate_input_metadata"
path = "validate_input_metadata.rs"

[[bin]]
name = "validate_output_metadata"
path = "validate_output_metadata.rs"

[[bin]]
name = "version"
path = "version.rs"

[dependencies]
clap.workspace = true
markdown.workspace = true
sha2.workspace = true
