[package]
name = "markdown_private_group"
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "group_publications"
path = "group_publications.rs"

[[bin]]
name = "group_summary"
path = "group_summary.rs"

[dependencies]
clap.workspace = true
csv.workspace = true
html-escape.workspace = true
markdown.workspace = true
regex.workspace = true
serde.workspace = true
tabled.workspace = true
